module(
    name = "rabbitmq_ra",
    version = "2.7.0-pre.3",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.11.4",
)

bazel_dep(
    name = "rabbitmq_seshat",
    version = "0.6.1",
    repo_name = "seshat",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config.internal_erlang_from_github_release(
    name = "24",
    sha256 = "8444ff9abe23aea268adbb95463561fc222c965052d35d7c950b17be01c3ad82",
    version = "24.3.4.6",
)

erlang_config.internal_erlang_from_github_release(
    name = "25",
    sha256 = "42840c32e13a27bdb2c376d69aa22466513d441bfe5eb882de23baf8218308d3",
    version = "25.1.1",
)

erlang_config.internal_erlang_from_github_release(
    name = "26",
    sha256 = "3ff3c53d7ef9a45b5720e95b8756269c1a1b58eb51accc992ca97522fdb234d4",
    version = "26.0",
)

use_repo(
    erlang_config,
    "erlang_config",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "aten",
    version = "0.5.8",
    sha256 = "64d40a8cf0ddfea4e13af00b7327f0925147f83612d0627d9506cbffe90c13ef",
)

erlang_package.hex_package(
    name = "gen_batch_server",
    sha256 = "94a49a528486298b009d2a1b452132c0a0d68b3e89d17d3764cb1ec879b7557a",
    version = "0.8.7",
)

erlang_package.git_package(
    name = "inet_tcp_proxy_dist",
    repository = "rabbitmq/inet_tcp_proxy",
    branch = "master",
)

erlang_package.git_package(
    repository = "eproxus/meck",
    branch = "master",
)

erlang_package.git_package(
    repository = "manopapad/proper",
    branch = "master",
)

use_repo(
    erlang_package,
    "aten",
    "gen_batch_server",
    "inet_tcp_proxy_dist",
    "meck",
    "proper",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_package.hex_package(
    name = "eunit_formatters",
    version = "0.5.0",
    build_file = "@rabbitmq_ra//bzl:BUILD.eunit_formatters",
)

use_repo(
    erlang_dev_package,
    "eunit_formatters",
)
