load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_erlang",
    # sha256 = "56569bf2d161ee5007e17bc77919df4d83696cd7ad8ff9be5202751cad3332fd",
    strip_prefix = "rules_erlang-2.5.0",
    urls = ["https://github.com/rabbitmq/rules_erlang/archive/refs/tags/2.5.0.zip"],
)

load("@rules_erlang//:rules_erlang.bzl", "rules_erlang_dependencies")

rules_erlang_dependencies()

load("@rules_erlang//:github.bzl", "github_erlang_app")
load("@rules_erlang//:hex_pm.bzl", "hex_pm_erlang_app")

hex_pm_erlang_app(
    name = "aten",
    sha256 = "8b623c8be27b59a911d16ab0af41777b504c147bc0d60a29015fab58321c04b0",
    version = "0.5.7",
)

hex_pm_erlang_app(
    name = "gen_batch_server",
    sha256 = "94a49a528486298b009d2a1b452132c0a0d68b3e89d17d3764cb1ec879b7557a",
    version = "0.8.7",
)

http_archive(
    name = "inet_tcp_proxy_dist",
    build_file_content = """load("@rules_erlang//:erlang_app.bzl", "erlang_app")
erlang_app(
    app_name = "inet_tcp_proxy_dist",
    app_version = "0.1.0",
    app_description = "Erlang distribution proxy to simulate network failures",
    app_module = "inet_tcp_proxy_dist_app",
)
""",
    strip_prefix = "inet_tcp_proxy-master",
    urls = ["https://github.com/rabbitmq/inet_tcp_proxy/archive/master.zip"],
)

github_erlang_app(
    name = "meck",
    org = "eproxus",
)

github_erlang_app(
    name = "proper",
    first_srcs = [
        "src/vararg.erl",
        "src/proper_target.erl",
    ],
    org = "manopapad",
)
