load(
    "@rules_erlang//tools:erlang.bzl",
    "erlang_toolchain_external",
    "erlang_toolchain_from_github_release",
)

erlang_toolchain_external()

erlang_toolchain_from_github_release(
    name_suffix = "_23",
    sha256 = "35123f366ded534775a05db8ad6c06c20519ae228af1b5952132b10845621f21",
    version = "23.3.4.14",
)

erlang_toolchain_from_github_release(
    name_suffix = "_24",
    sha256 = "76fcca5ba6f11eb9caac32bf053badc46b5d66f867150eef077f4f0d7944ecd7",
    version = "24.3.4",
)

erlang_toolchain_from_github_release(
    name_suffix = "_25",
    sha256 = "2d7678c9bc6fcf3a1242c4d1c3864855d85e73ade792cd80adb8a9f379996711",
    version = "25.0",
)
